--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@tiptap/pm": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
+    "@types/dompurify": "^3.0.5",
+    "dompurify": "^3.2.4",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
