--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tiptap/starter-kit": "^2.11.5",
     "@types/dompurify": "^3.0.5",
     "dompurify": "^3.2.4",
+    "framer-motion": "^12.5.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
